--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-color": "^2.19.3",
+    "react-color-picker": "^4.0.2",
     "react-dom": "^17.0.2",
     "react-responsive": "^9.0.0-beta.6",
     "react-router-dom": "^6.2.1",
